# bayesoptpy

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  setup.py
.github/workflows/: bayesopt_interfaces.yaml
bayesopt_ros_bridge/: README.md
bayesopt_ros_bridge/bayesopt_ros_bridge/: CMakeLists.txt  package.xml
bayesopt_ros_bridge/combo_ros_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
bayesopt_ros_bridge/combo_ros_bridge/config/: candidates_config.yaml
bayesopt_ros_bridge/combo_ros_bridge/launch/: combo_ros_bridge.launch
bayesopt_ros_bridge/combo_ros_bridge/scripts/: combo_ros_bridge_node.py  test_combo_interface.py
bayesopt_ros_bridge/combo_ros_bridge/src/combo_ros_bridge/: combo_interface.py  combo_ros_bridge.py
bayesopt_ros_bridge/physbo_ros_bridge/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
docs/: bayesopt_interfaces.md
examples/: run_combo.py  run_physbo.py
examples/bayesopt/: .gitignore  run_physbo.py
ml_interfaces/bayesopt_ros_bridge/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ml_interfaces/bayesopt_ros_bridge/config/: bridge_config_combo.yaml  bridge_config_physbo.yaml
ml_interfaces/bayesopt_ros_bridge/launch/: combo_ros_bridge.launch  physbo_ros_bridge.launch
ml_interfaces/bayesopt_ros_bridge/scripts/: combo_ros_bridge_node.py  physbo_ros_bridge_node.py
ml_interfaces/bayesopt_ros_bridge/src/bayesopt_ros_bridge/: bayesopt_ros_bridge.py  bayesopt_ros_bridge_subscriber.py  physbo_ros_bridge.py
tests/: test_combo_interface.py  test_physbo_interface.py
(+39 files in other folders)
